Smoke tests fix